First webpage with Py-Script

--- a/example1.html
+++ b/example1.html
@@ -1,24 +1,43 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Altair</title>
-    <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="./favicon.png">
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <title>My example of PyScript</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" user-scalable=no initial-scale=1.0 maximum-scale=1.0>
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
+    <script defer="" src="https://pyscript.net/alpha/pyscript.js"></script>
+    <link rel="stylesheet" href="example1_style.css">
     <py-env>
-        - altair - pandas - vega_datasets
+        - matplotlib
     </py-env>
 </head>
 
 <body>
-    <div id="altair" style="width: 100%; height: 100%"></div>
-    <py-script output="altair">
-        import altair as alt from vega_datasets import data source = data.movies.url pts = alt.selection(type="single", encodings=['x']) rect = alt.Chart(data.movies.url).mark_rect().encode( alt.X('IMDB_Rating:Q', bin=True), alt.Y('Rotten_Tomatoes_Rating:Q',
-        bin=True), alt.Color('count()', scale=alt.Scale(scheme='greenblue'), legend=alt.Legend(title='Total Records') ) ) circ = rect.mark_point().encode( alt.ColorValue('grey'), alt.Size('count()', legend=alt.Legend(title='Records in Selection') ) ).transform_filter(
-        pts ) bar = alt.Chart(source).mark_bar().encode( x='Major_Genre:N', y='count()', color=alt.condition(pts, alt.ColorValue("steelblue"), alt.ColorValue("grey")) ).properties( width=550, height=200 ).add_selection(pts) alt.vconcat( rect + circ, bar
-        ).resolve_legend( color="independent", size="independent" )
+    <h1>The chart presenting a linear function</h1>
+    <div id="lineplot"></div>
+    <py-script output="lineplot">
+        import matplotlib.pyplot as plt 
+        fig, ax = plt.subplots() 
+
+        year_1 = [2016, 2017, 2018, 2019, 2020, 2021] 
+        population_1 = [42, 43, 45, 47, 48, 50] 
+
+        year_2 = [2016, 2017, 2018, 2019, 2020, 2021] 
+        population_2 = [43, 43, 44, 44, 45, 45] 
+
+        plt.plot(year_1, population_1, marker='o', linestyle='--', color='g', label='Country 1') 
+        plt.plot(year_2, population_2, marker='d', linestyle='-', color='r', label='Country 2') 
+
+        plt.xlabel("Year") 
+        plt.ylabel("Population") 
+        plt.title("Year vs Population") 
+        plt.legend(loc="lower right") 
+
+        fig
     </py-script>
 </body>
+
 
 </html>
