Third example of Py-script

--- a/example2.html
+++ b/example2.html
@@ -18,8 +18,31 @@
 <body>
     <h1>This is example of using Py-script to generate a simple charts</h1>
     <div id="plot"></div>
-    <py-script output="plot" src="./example2.py">
+    <py-script output="plot">
+        import matplotlib.pyplot as plt 
+        import numpy as np
+        from sklearn.datasets import make_classification
 
+        # Generating data
+        X, y = make_classification(
+            n_samples=100,
+            n_features=2,
+            n_classes=2,
+            n_informative=2,
+            n_redundant=0,
+            n_repeated=0,
+            random_state=1234
+        )
+
+        fig, ax = plt.subplots()
+        ax.scatter(X[:,0], X[:,1], c=y)
+
+        plt.title("Some data distribution")
+        plt.xlabel("Feature 0")
+        plt.ylabel("Feature 1")
+        plt.legend()
+
+        fig
     </py-script>
 </body>
 
